# baseplug_tests

./: Cargo.toml  README.md
dynsat/: Cargo.toml
dynsat/src/: lib.rs  svf.rs  units.rs
gain/: Cargo.toml
gain/src/: lib.rs
onepole/: Cargo.toml
onepole/src/: lib.rs
varb/: Cargo.toml
varb/src/: comp.rs  lib.rs
