[package]
name = "gain"
version = "0.1.0"
authors = ["DGriffin91 <github@dgdigital.net>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseplug = { git = "https://github.com/wrl/baseplug.git", branch="trunk" }
serde = { version = "1.0", features = ["derive"] }